# CameraApp

./: CMakeLists.txt
App/: CMakeLists.txt  main.cpp  resource.qrc
App/QML/: 1x1View.qml  2x2View.qml  4x4View.qml  CameraPlayer.qml  CameraView.qml  LoginForm.qml  Main.qml
App/SRCS/: CameraPlayerPresenter.cpp  CameraPlayerPresenter.hpp  Defines.h  LoginHandler.cpp  LoginHandler.h  LoginManger.cpp  LoginManger.h  LoginPresenter.cpp  LoginPresenter.h  main.cpp
Engine/: CMakeLists.txt
Engine/SRCS/: DetectCar.cpp  DetectCar.hpp  InitializerEngine.cpp  InitializerEngine.hpp  RepeaterManager.cpp  RepeaterManager.hpp  StreamRepeater.cpp  StreamRepeater.hpp
ExtraModule/: CMakeLists.txt  resource.qrc
ExtraModule/QML/: hello.qml
ExtraModule/SRCS/: Hello.cpp  Hello.h  InitializerExtraModule.cpp  InitializerExtraModule.h
Templates/: CMakeLists.txt
Templates/SRCS/: SingletonTemplate.hpp
